--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,10 +8,31 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./styles.css">
+
   <script src="https://unpkg.com/feather-icons"></script>
   <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
 </head>
+
 <body>
-  <div id="app"></div>
+  <header id="main-header">
+    <div class="content">
+      <nav>
+        <ul>
+          <li><img src="./img/home.svg" alt="Home">Home</li>
+          <li><img src="./img/bell.svg" alt="Notifications">Notifications</li>
+          <li><img src="./img/mail.svg" alt="Messages">Messages</li>
+        </ul>
+      </nav>
+      <img src="./img/twitter.svg" alt="Home">
+      <div class="side">
+        <input type="text" placeholder="Search on twitter" />
+        <div class="figcaption">
+          <img src="./img/user.svg" alt="User">
+        </div>
+        <button>Tweet</button>
+      </div>
+    </div>
+  </header>
 </body>
+
 </html>
