--- a/app/index.html
+++ b/app/index.html
@@ -37,6 +37,41 @@
   <div class="banner">
     <h1>Flexbox CSS</h1>
   </div>
+
+  <div class="bar">
+    <div class="content">
+      <ul>
+        <li class="active">
+          <span>Tweets</span>
+          <strong>3931</strong>
+        </li>
+        <li>
+          <span>Followings</span>
+          <strong>654</strong>
+        </li>
+        <li>
+          <span>Followers</span>
+          <strong>387</strong>
+        </li>
+        <li>
+          <span>Favorites</span>
+          <strong>265</strong></li>
+        <li>
+          <span>Lists</span>
+          <strong>8</strong>
+        </li>
+        <li>
+          <span>Moments</span>
+          <strong>0</strong>
+        </li>
+      </ul>
+
+      <div class="actions">
+        <button>Follow</button>
+        <img src="./img/more-vertical.svg" alt="More">
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
