--- a/app/index.html
+++ b/app/index.html
@@ -8,9 +8,6 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./styles.css">
-
-  <script src="https://unpkg.com/feather-icons"></script>
-  <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
 </head>
 
 <body>
@@ -71,6 +68,117 @@
         <img src="./img/more-vertical.svg" alt="More">
       </div>
     </div>
+  </div>
+
+  <div class="wrapper-content content">
+    <aside class="profile">
+      <div class="figcaption">
+        <img class="avatar" src="./img/user.svg" alt="User">
+      </div>
+      <h1>Lorem Ipsum</h1>
+      <span>@Exibit</span>
+      <p>Morbi sit amet dictum nisi, vitae dapibus leo.</p>
+
+      <ul class="list">
+        <li>
+          <img src="./img/map-pin.svg" alt="Home">
+          <span>Namur, Belgium</span>
+        </li>
+        <li>
+          <img src="./img/link.svg" alt="Home">
+          <a href="#">exibit.be</a>
+        </li>
+        <li>
+          <img src="./img/clock.svg" alt="Home">
+          <span>Joined June 2007</span>
+        </li>
+        <li>
+          <img src="./img/smile.svg" alt="Home">
+          <span>Born the 20th of June 1978</span>
+        </li>
+      </ul>
+
+      <div class="widget followers">
+        <strong><img src="./img/user.svg" alt="Followers"> 73 followers that you know</strong>
+
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+      </div>
+
+      <div class="widget images">
+        <strong><img src="./img/image.svg" alt="Images"> 266 Photos and video</strong>
+
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+      </div>
+    </aside>
+    <section class="timeline">
+      timeline
+    </section>
+    <aside class="widgets">
+      <div class="widget follow">
+        <div class="title">
+          <strong>Who to follow</strong>
+          <a href="#">Refresh</a>
+          <a href="#">View all</a>
+        </div>
+
+        <ul>
+          <li>
+            <div class="profile">
+              <div class="figcaption">
+                <img src="./img/user.svg" alt="User">
+              </div>
+              <div class="info">
+                <strong>Spade <span>@spade_be</span></strong>
+                <button>Follow</button>
+              </div>
+            </div>
+            <a href="#" class="btn-close">x</a>
+          </li>
+          <li>
+            <div class="profile">
+              <div class="figcaption">
+                <img src="./img/user.svg" alt="User">
+              </div>
+              <div class="info">
+                <strong>Spade <span>@spade_be</span></strong>
+                <button>Follow</button>
+              </div>
+            </div>
+            <a href="#" class="btn-close">x</a>
+          </li>
+          <li>
+            <div class="profile">
+              <div class="figcaption">
+                <img src="./img/user.svg" alt="User">
+              </div>
+              <div class="info">
+                <strong>Spade <span>@spade_be</span></strong>
+                <button>Follow</button>
+              </div>
+            </div>
+            <a href="#" class="btn-close">x</a>
+          </li>
+        </ul>
+      </div>
+    </aside>
   </div>
 </body>
 
