--- a/app/index.html
+++ b/app/index.html
@@ -129,7 +129,119 @@
       </div>
     </aside>
     <section class="timeline">
-      timeline
+      <nav>
+        <a href="#" class="active">Tweets</a>
+        <a href="#">Tweets and replies</a>
+        <a href="#">Medias</a>
+      </nav>
+
+      <ul class="tweets">
+        <li>
+          <div class="figcaption">
+            <img class="avatar" src="./img/user.svg" alt="User">
+          </div>
+          <div class="info">
+            <strong>Benoít Vrins <span>@@Exibit</span></strong>
+            <p>Curabitur congue ac libero non mollis. Aenean nunc odio, bibendum et fringilla eleifend, imperdiet non metus. Vivamus placerat purus nec ornare fermentum. </p>
+
+            <div class="actions">
+              <a href="#"><img src="./img/message-circle.svg" alt=""> 3</a>
+              <a href="#"><img src="./img/refresh-cw.svg" alt=""> 4</a>
+              <a href="#"><img src="./img/heart.svg" alt=""> 5</a>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="figcaption">
+            <img class="avatar" src="./img/user.svg" alt="User">
+          </div>
+          <div class="info">
+            <strong>Benoít Vrins <span>@@Exibit</span></strong>
+            <p>Curabitur congue ac libero non mollis. Aenean nunc odio, bibendum et fringilla eleifend, imperdiet non metus. Vivamus placerat purus nec ornare fermentum. </p>
+
+            <div class="actions">
+              <a href="#"><img src="./img/message-circle.svg" alt=""> 3</a>
+              <a href="#"><img src="./img/refresh-cw.svg" alt=""> 4</a>
+              <a href="#"><img src="./img/heart.svg" alt=""> 5</a>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="figcaption">
+            <img class="avatar" src="./img/user.svg" alt="User">
+          </div>
+          <div class="info">
+            <strong>Benoít Vrins <span>@@Exibit</span></strong>
+            <p>Curabitur congue ac libero non mollis. Aenean nunc odio, bibendum et fringilla eleifend, imperdiet non metus. Vivamus placerat purus nec ornare fermentum. </p>
+
+            <div class="actions">
+              <a href="#"><img src="./img/message-circle.svg" alt=""> 3</a>
+              <a href="#"><img src="./img/refresh-cw.svg" alt=""> 4</a>
+              <a href="#"><img src="./img/heart.svg" alt=""> 5</a>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="figcaption">
+            <img class="avatar" src="./img/user.svg" alt="User">
+          </div>
+          <div class="info">
+            <strong>Benoít Vrins <span>@@Exibit</span></strong>
+            <p>Curabitur congue ac libero non mollis. Aenean nunc odio, bibendum et fringilla eleifend, imperdiet non metus. Vivamus placerat purus nec ornare fermentum. </p>
+
+            <div class="actions">
+              <a href="#"><img src="./img/message-circle.svg" alt=""> 3</a>
+              <a href="#"><img src="./img/refresh-cw.svg" alt=""> 4</a>
+              <a href="#"><img src="./img/heart.svg" alt=""> 5</a>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="figcaption">
+            <img class="avatar" src="./img/user.svg" alt="User">
+          </div>
+          <div class="info">
+            <strong>Benoít Vrins <span>@@Exibit</span></strong>
+            <p>Curabitur congue ac libero non mollis. Aenean nunc odio, bibendum et fringilla eleifend, imperdiet non metus. Vivamus placerat purus nec ornare fermentum. </p>
+
+            <div class="actions">
+              <a href="#"><img src="./img/message-circle.svg" alt=""> 3</a>
+              <a href="#"><img src="./img/refresh-cw.svg" alt=""> 4</a>
+              <a href="#"><img src="./img/heart.svg" alt=""> 5</a>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="figcaption">
+            <img class="avatar" src="./img/user.svg" alt="User">
+          </div>
+          <div class="info">
+            <strong>Benoít Vrins <span>@@Exibit</span></strong>
+            <p>Curabitur congue ac libero non mollis. Aenean nunc odio, bibendum et fringilla eleifend, imperdiet non metus. Vivamus placerat purus nec ornare fermentum. </p>
+
+            <div class="actions">
+              <a href="#"><img src="./img/message-circle.svg" alt=""> 3</a>
+              <a href="#"><img src="./img/refresh-cw.svg" alt=""> 4</a>
+              <a href="#"><img src="./img/heart.svg" alt=""> 5</a>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="figcaption">
+            <img class="avatar" src="./img/user.svg" alt="User">
+          </div>
+          <div class="info">
+            <strong>Benoít Vrins <span>@@Exibit</span></strong>
+            <p>Curabitur congue ac libero non mollis. Aenean nunc odio, bibendum et fringilla eleifend, imperdiet non metus. Vivamus placerat purus nec ornare fermentum. </p>
+
+            <div class="actions">
+              <a href="#"><img src="./img/message-circle.svg" alt=""> 3</a>
+              <a href="#"><img src="./img/refresh-cw.svg" alt=""> 4</a>
+              <a href="#"><img src="./img/heart.svg" alt=""> 5</a>
+            </div>
+          </div>
+        </li>
+      </ul>
     </section>
     <aside class="widgets">
       <div class="widget follow">
